src/objects/BMCServiceDesk__Survey__c.object
<CustomObject>
    <description>Stores the information regarding surveys</description>
    <fields>
        <fullName>BMCServiceDesk__Comments__c</fullName>
        <inlineHelpText>Any additional feedback you’d like to share with us?</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKIncident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Incident__c</fullName>
        <formula>BMCServiceDesk__FKIncident__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incident #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Response_Timeliness__c</fullName>
        <inlineHelpText>How responsive was the Service Desk?</inlineHelpText>
        <label>Response Timeliness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not responsive at all</fullName>
                </value>
                <value>
                    <fullName>Slightly responsive</fullName>
                </value>
                <value>
                    <fullName>Moderately responsive</fullName>
                </value>
                <value>
                    <fullName>Very responsive</fullName>
                </value>
                <value>
                    <fullName>Extremely responsive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Satisfaction__c</fullName>
        <inlineHelpText>Did the assistance provided meet your satisfaction?</inlineHelpText>
        <label>Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not satisfied at all</fullName>
                </value>
                <value>
                    <fullName>Slightly satisfied</fullName>
                </value>
                <value>
                    <fullName>Moderately satisfied</fullName>
                </value>
                <value>
                    <fullName>Very satisfied</fullName>
                </value>
                <value>
                    <fullName>Extremely satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Desk_Performance__c</fullName>
        <inlineHelpText>How well did the Service Desk handle your request?</inlineHelpText>
        <label>Service Desk Performance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not well at all</fullName>
                </value>
                <value>
                    <fullName>Slightly well</fullName>
                </value>
                <value>
                    <fullName>Moderately well</fullName>
                </value>
                <value>
                    <fullName>Very well</fullName>
                </value>
                <value>
                    <fullName>Extremely well</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Staff_Effectiveness__c</fullName>
        <inlineHelpText>How would you rate the knowledge and attitude of the analyst?(1=Poor, 5=Outstanding)</inlineHelpText>
        <label>Staff Effectiveness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SurveyFor__c</fullName>
        <formula>BMCServiceDesk__FKIncident__r.BMCServiceDesk__Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ToBeDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ToBeDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Response #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>